# 1121_Computational_Thinking_Final

./: .gitignore  Parameter_find.py  README.md  Weather.py  json2csv.py  json2dataframe.py  json2timecsv.py  pyproject.toml  util.py
.github/workflows/: fetch_weather.yml
raw_weather_data/: 20231130_222901.json  20231130_223701.json  20231130_231501.json  20231201_001501.json  20231201_011501.json  20231201_021501.json  20231201_031501.json  20231201_041501.json  20231201_051501.json  20231201_061501.json  20231201_071501.json  20231201_081501.json  20231201_091501.json  20231201_101501.json  20231201_111501.json  20231201_121501.json  20231201_131501.json  20231201_141501.json  20231201_151501.json  20231201_161501.json  20231201_171501.json  20231201_181501.json  20231201_191501.json  20231201_201501.json  20231201_211501.json  20231201_221501.json  20231201_231501.json  20231202_001502.json  20231202_011501.json  20231202_021501.json  20231202_031501.json  20231202_041501.json  20231202_051501.json  20231202_061501.json  20231202_071501.json  20231202_081501.json  20231202_091501.json  20231202_101501.json  20231202_111501.json  20231202_121501.json  (+595 more)
